# consistency-gated-self-correction

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: datasets.yaml  experiments.yaml  models.yaml
docs/: method_en.md  method_zh-CN.md  reproducibility.md
kaggle/: README.md  foreground_cell.py
paper/: README.md
results/derived/: dataset_average_tau04_percent.csv
results/p1/: p1_consistency_bins_aggregate.csv
results/summary/: best_k5.csv  k3_posthoc.csv  main_tau04.csv
scripts/: build_released_tables.py  run_all_matrix.py  run_experiment.py
src/cgsc/: __init__.py  answer_extraction.py  consistency.py  datasets.py  evaluation.py  generation.py  prompts.py
tests/: test_answer_extraction.py  test_consistency.py
